# hot_update_server

./: .env  .gitignore  Cargo.toml  Makefile  backend.dockerfile  backend_nginx.dockerfile  config.toml  default.conf  log4rs.yml
src/: config.rs  init.rs  main.rs  session.rs
src/api/: auth.rs  mod.rs  user.rs
src/dao/: mod.rs
src/dao/meilisearch/: mod.rs  user.rs
src/dao/pg/: role.rs  user.rs
src/dao/redis/: lua_script.rs  mod.rs  user.rs
src/editor/: api.rs  mod.rs
src/middleware/: auth.rs  cors.rs  logger.rs  mod.rs
src/model/: user.rs
src/openapi/: auth.rs  mod.rs  role.rs  security.rs  sync.rs  user.rs
src/service/: user.rs
src/static_file/: mod.rs
src/upload_file/: mod.rs
src/ws/: api.rs  hub.rs  mod.rs  server.rs  session.rs
static/browser_editor/: index.html
static/lua_scripts/: json.lua  rooms_change.lua  rooms_retrieve.lua
static/ws/: index.html
