[package]
edition = "2021"
name = "hot_update_server"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# futures = "0"      # To be able to block on async functions if you are not using an async runtime
futures-util = "0"

# actix = "0"
actix-cors = "0"
actix-files = { version = "0" }
actix-web = { version = "4", features = ["openssl"] }
actix-ws = { version = "0" }
log = "0"
log4rs = { version = "1", features = ["all_components"] }
openssl = { version = "0", features = ["v110", "vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.23", features = ["rt-multi-thread", "macros", "time"] }
toml = { version = "0" }
dotenv = "0"
util_datetime = { git = "https://github.com/yuexclusive/utilities.git" }
util_error = { git = "https://github.com/yuexclusive/utilities.git", features = [
  "full",
] }
util_response = { git = "https://github.com/yuexclusive/utilities.git" }
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
# bytes = "*"
actix-multipart = { version = "0" }
anyhow = "1.0.72"
once_cell = "1"
sanitize-filename = "0"
fancy-regex = "0"
# syn = "*"